@@ -2,10 +2,18 @@ package com.lorepo.icplayer.client.module.imagesource;
 
 import com.google.gwt.event.dom.client.ClickEvent;
 import com.google.gwt.event.dom.client.ClickHandler;
+import com.google.gwt.event.dom.client.TouchCancelEvent;
+import com.google.gwt.event.dom.client.TouchCancelHandler;
+import com.google.gwt.event.dom.client.TouchEndEvent;
+import com.google.gwt.event.dom.client.TouchEndHandler;
+import com.google.gwt.event.dom.client.TouchMoveEvent;
+import com.google.gwt.event.dom.client.TouchMoveHandler;
+import com.google.gwt.event.dom.client.TouchStartEvent;
+import com.google.gwt.event.dom.client.TouchStartHandler;
 import com.google.gwt.user.client.ui.Image;
 import com.lorepo.icplayer.client.framework.module.StyleUtils;
 import com.lorepo.icplayer.client.module.imagesource.ImageSourcePresenter.IDisplay;
-
+import com.google.gwt.dom.client.Touch;
 
 public class ImageSourceView extends Image implements IDisplay {
 
@@ -15,6 +23,7 @@ public class ImageSourceView extends Image implements IDisplay {
 	private ImageSourceModule module;
 	private IViewListener listener;
 	
+	private boolean isTouched = false;
 	
 	public ImageSourceView(ImageSourceModule module, boolean isPreview) {
 		
@@ -41,6 +50,46 @@ public class ImageSourceView extends Image implements IDisplay {
 	
 	
 	private void connectHandlers() {
+		
+		addTouchStartHandler(new TouchStartHandler() {
+			public void onTouchStart(TouchStartEvent event) {
+				event.stopPropagation();
+				event.preventDefault();
+				
+				isTouched = true;
+			}
+		});
+		
+		addTouchMoveHandler(new TouchMoveHandler() {
+			public void onTouchMove(TouchMoveEvent event) {
+				event.stopPropagation();
+				event.preventDefault();
+				
+				isTouched = false;
+			}
+		});
+		
+		addTouchCancelHandler(new TouchCancelHandler() {
+			public void onTouchCancel(TouchCancelEvent event) {
+				event.stopPropagation();
+				event.preventDefault();
+				
+				isTouched = false;
+			}
+		});
+		
+		addTouchEndHandler(new TouchEndHandler() {
+			public void onTouchEnd(TouchEndEvent event) {
+				event.stopPropagation();
+				event.preventDefault();
+				
+				if (isTouched) {
+					if(listener != null){
+						listener.onClicked();
+					}
+				}
+			}
+		});
 		
 		addClickHandler(new ClickHandler() {
 			public void onClick(ClickEvent event) {
